<?xml version="1.0"?>

<package format="2">

  <name>tsdf_map</name>
  <version>1.0.0</version>
  <description>TODO</description>

  <maintainer email="jan.kuhlmann@informatik.hs-fulda.de">Jan Kuhlmann</maintainer>

  <author>Jan Kuhlmann</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
    
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <export>
  </export>

</package>
